src/test/deca/context/valid/oracle/print_all_types.deca
{
    print("Hello World !", 2, 56.3652336f);
}