src/test/deca/context/invalid/oracle/condition_float.deca
{
    if(25.6){
        print("Hello world !");
    }
}